Fix the contrast of the `.formError` color
See https://www.woltlab.com/community/thread/301284-fehler-in-labels-im-dark-mode-haben-keinen-guten-kontrast/

--- a/wcfsetup/install/files/style/layout/form.scss
+++ b/wcfsetup/install/files/style/layout/form.scss
@@ -208,15 +208,21 @@ input {
 }
 
 .formError {
+	--color-error: #c00;
+
 	dt {
-		color: rgba(204, 0, 1, 1) !important;
+		color: var(--color-error) !important;
 	}
 
 	input,
 	select,
 	textarea {
-		border-color: rgba(204, 0, 1, 1) !important;
+		border-color: var(--color-error) !important;
 	}
+}
+
+html[data-color-scheme="dark"] .formError {
+	--color-error: #ff4747;
 }
 
 /* grid-based form controls */
